uib header navigation alignment fixed

--- a/frontend/sass/_main.scss
+++ b/frontend/sass/_main.scss
@@ -1059,8 +1059,7 @@
                                             }
 
                                             .side-nav-menu-in {
-                                                @include transform(rotate(0deg) scale(1) skew(0deg) translate(0,
-                                                14px));
+                                                @include transform(rotate(0deg) scale(1) skew(0deg) translate(0));
                                                 @include transform-origin(center bottom);
                                             }
 
